# charon-crossing

./: .gitignore  BasbanesEternalPassion.csv  README.md  pyproject.toml  scifi-exhibit-2021.csv
charon_crossing/: Stephen_Powys_Marks_London_Collection.csv  __init__.py  alice_in_wonderland_test_2.csv  berger_cloonan_batch_6.csv  berger_cloonan_batch_8.csv  berger_cloonan_first_58-2020-11-11%5B3%5D.csv  bryan-150.csv  cherokee_freedmen.csv  corina-test.csv  fedora_fields_generator.csv  ferr_script.ipynb  ferry.py  ferry_log.txt  henry-test.csv  james-test-ingest-20251021.csv  lumpkin-papers.csv  quick-audrey.csv  scifi-exhibit-2021-b.csv
csv_data_files/: BasbanesEternalPassion.csv  a-time-of-resolve-2020-09-22.csv  aerial.csv  alice_in_wonderland_test_3.csv  apfelbaum-ww1.csv  audrey-import.csv  basbanes-exhibit-texts-20240924.csv  basbanes-texts%5B2%5D.csv  basbanes-texts.csv  basbanes-texts_5B3_5D.csv  batch-service-maps-tests.csv  berger_cloonan.csv  berger_cloonan_batch_3.csv  berger_cloonan_batch_4.csv  berger_cloonan_batch_7.csv  berger_cloonan_batch_a.csv  berger_cloonan_first_58-2020-07-30.csv  berger_cloonan_first_58-2020-11-11%5B2%5D.csv  berger_cloonan_first_58-2020-11-11%5B4%5D.csv  berger_cloonan_public_domain-2020-07-30.csv  brazos-maps.csv  charting-texas-revised.csv  charting-texas.csv  cherokee-cant-reindex.csv  cherokee-freedmen-corrected.csv  cherokee-freedmen-fixed.csv  cole-papers.csv  com_class_rosters.csv  cvm-batch-2.csv  cvm-batch-3.csv  graydiary-saf.csv  kev-quick.csv  la_linda_poblana.csv  last_batch_for_pre.csv  london-collection.csv  (+52 more)
(+34 files in other folders)
