[tool.poetry]
name = "charon-crossing"
version = "0.4.0"
description = ""
authors = ["Mark Baggett <markpbaggett@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
httpx = "^0.28.1"
rdflib = "^7.5.0"
rdflib-jsonld = "^0.6.2"
iiif-prezi3 = "^3.0.0"
tqdm = "^4.67.1"
sparqlwrapper = "^2.0.0"
click = "^8.0.0"

[tool.poetry.scripts]
ferry = "charon_crossing.ferry:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
